--- a/main.html
+++ b/main.html
@@ -7,6 +7,23 @@
 </head>
 
 <body>
+
+	
+<h1>Feedback Form</h1>
+<form>
+<label for="name">Name</label>
+<input type="text" value="" minlength="3" maxlength="50" id="name">
+
+<label for="portfolio">Portfolio</label>
+<input type="url" name="" id="portfolio">
+
+<label for="favColor">Favorite Color</label>
+<input type="Color" value="" id="favColor">
+
+<label for="likeness">Likeness</label>
+<input type="Range" value="" min="1" max="100">
+
+
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
