--- a/main.html
+++ b/main.html
@@ -23,7 +23,7 @@
 
 <label for="likeness">Likeness</label>
 <input type="Range" value="" min="1" max="100">
-
+</form>
 
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
