--- a/main.html
+++ b/main.html
@@ -10,7 +10,7 @@
 
 	
 
-<form>
+<form method="post">
 <h1>Feedback Form</h1>
 <label for="name">Name</label>
 <input type="text" value="" minlength="3" maxlength="50" id="name">
