--- a/main.html
+++ b/main.html
@@ -22,7 +22,7 @@
 <input type="Color" value="" id="favColor">
 
 <label for="likeness">Likeness</label>
-<input type="Range" value="" min="1" max="100">
+<input type="Range" value="" min="1" max="100" id="likeness">
 </form>
 
 	<!-- the entire body must be written by student -->
